# geo-box-azure-hackathon

./: .env.example  .gitignore  Containerfile  LICENSE  README.md  podman-compose.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/skills/deploy-azure/: SKILL.md
docs/: BOX_SETUP.md  LOCAL_TESTING.md  PRD.md  QUICKSTART.md  architecture.md  deployment_guide.md
iac/: main.bicep
scripts/: build.ps1  create_box_template.py  deploy-azure.ps1  deploy-with-bicep.ps1  run-local.ps1  stop-local.ps1  test-local.ps1  watch-logs.sh
src/: .env.example  __init__.py  box_client.py  config.py  main.py
src/agents/: __init__.py  extraction_agent.py  orchestrator_agent.py  validation_agent.py
src/mcp_servers/exiftool_server/: .dockerignore  Containerfile  README.md  __init__.py  gateway_middleware.py  http_server.py  requirements.txt  server.py  sse_server.py
src/mcp_servers/geo_server/: Containerfile  __init__.py  http_server.py  requirements.txt
tests/: test_exiftool_gps.py  test_integration.py
